[gd_scene load_steps=9 format=3 uid="uid://dwgy71fyoxp3n"]

[ext_resource type="Script" uid="uid://bmq5pvsw4xyg" path="res://scripts/_menu.gd" id="1_wd2sg"]
[ext_resource type="Texture2D" uid="uid://mi6wme0rd3wf" path="res://assets/textures/ui/Controller.png" id="2_4imft"]
[ext_resource type="Script" uid="uid://bkg61hdfy3es1" path="res://scripts/menu_func/unhide_child.gd" id="2_f8o7y"]
[ext_resource type="PackedScene" uid="uid://d4i7em6ocave8" path="res://core/menu_visual.tscn" id="2_grplm"]
[ext_resource type="Script" uid="uid://cpvh41bg6i7dd" path="res://scripts/menu_func/link.gd" id="4_wyrkb"]
[ext_resource type="Script" uid="uid://bhursmnsv8pmx" path="res://scripts/lobby-ui.gd" id="6_grplm"]
[ext_resource type="AudioStream" uid="uid://d01betlfqjv2x" path="res://assets/sfx/menu/dark-rituals-epic-cinematic-action-horror-music-254253.mp3" id="9_6yjyn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yyjbq"]
bg_color = Color(0.44291073, 0.4429108, 0.4429106, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.106237, 0.106237, 0.106236, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 16.0
expand_margin_top = 16.0
expand_margin_right = 16.0
expand_margin_bottom = 16.0

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wd2sg")

[node name="background" type="SubViewportContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1074.0
stretch = true

[node name="viewport" type="SubViewport" parent="background"]
handle_input_locally = false
msaa_3d = 3
screen_space_aa = 1
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="menu" parent="background/viewport" instance=ExtResource("2_grplm")]

[node name="Camera3D" type="Camera3D" parent="background/viewport"]
transform = Transform3D(-0.8428377, 0, -0.53816783, 0, 1, 0, 0.53816783, 0, -0.8428377, -61.6063, 8.54683, 8.2806)
current = true
fov = 51.4

[node name="options" type="Control" parent="."]
anchors_preset = 0
offset_left = 1378.0
offset_top = 334.0
offset_right = 1537.0
offset_bottom = 699.0

[node name="bg_panel" type="Panel" parent="options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.5
offset_top = -292.5
offset_right = 80.5
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yyjbq")

[node name="title" type="Label" parent="options"]
layout_mode = 0
offset_left = -170.0
offset_top = -110.0
offset_right = 147.0
offset_bottom = -65.0
theme_override_font_sizes/font_size = 57
text = "warpigs.gg"
horizontal_alignment = 1
vertical_alignment = 1

[node name="fields" type="Label" parent="options"]
layout_mode = 0
offset_left = -166.0
offset_top = -4.0
offset_right = -8.0
offset_bottom = 361.0
text = "Number of Players

Map

Points to Win"

[node name="player_count" type="SpinBox" parent="options"]
layout_mode = 0
offset_left = 76.0
offset_right = 163.0
offset_bottom = 31.0
min_value = 1.0
max_value = 2.0
value = 2.0
alignment = 1
update_on_text_changed = true

[node name="map_select" type="LineEdit" parent="options"]
layout_mode = 0
offset_top = 48.0
offset_right = 143.0
offset_bottom = 85.0
text = "map_checkpoint"

[node name="points" type="SpinBox" parent="options"]
layout_mode = 0
offset_left = 76.0
offset_top = 100.0
offset_right = 159.063
offset_bottom = 131.0
min_value = 1.0
max_value = 999.0
value = 3.0
alignment = 1
update_on_text_changed = true

[node name="start_match" type="Button" parent="options"]
layout_mode = 0
offset_left = -134.0
offset_top = 192.0
offset_right = 110.0
offset_bottom = 223.0
text = "Start Local Match"

[node name="little_options" type="Panel" parent="options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.5
offset_top = 386.5
offset_right = 81.5
offset_bottom = 425.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yyjbq")

[node name="Controls" type="Button" parent="options/little_options"]
layout_mode = 0
offset_left = 124.0
offset_top = 1.0
offset_right = 211.0
offset_bottom = 40.0
text = "Controls"
script = ExtResource("2_f8o7y")

[node name="bg_panel2" type="Panel" parent="options/little_options/Controls"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1139.5
offset_top = -530.5
offset_right = -236.5
offset_bottom = -165.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yyjbq")

[node name="Controller" type="Sprite2D" parent="options/little_options/Controls/bg_panel2"]
position = Vector2(463, 178)
texture = ExtResource("2_4imft")

[node name="Github" type="Button" parent="options/little_options"]
layout_mode = 0
offset_left = 243.0
offset_top = 1.0
offset_right = 330.0
offset_bottom = 40.0
text = "Github"
script = ExtResource("4_wyrkb")
url = "https://github.com/Ultramine3000/Gunfight.io"

[node name="Discord" type="Button" parent="options/little_options"]
layout_mode = 0
offset_left = 7.0
offset_right = 94.0
offset_bottom = 39.0
text = "Discord"
script = ExtResource("4_wyrkb")
url = "https://discord.gg/7ErvcvcwTC"

[node name="Online" type="MarginContainer" parent="options"]
layout_mode = 0
offset_left = -176.0
offset_top = 311.0
offset_right = 158.0
offset_bottom = 501.0

[node name="bg_panel" type="Panel" parent="options/Online"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yyjbq")

[node name="Lobby" type="VBoxContainer" parent="options/Online" node_paths=PackedStringArray("menu", "leader_label", "room_code_label", "create_lobby_button", "join_container", "join_lobby_button", "room_code_input", "start_button", "leave_button", "map_select", "points_to_win")]
layout_mode = 2
script = ExtResource("6_grplm")
menu = NodePath("../../..")
leader_label = NodePath("Leader")
room_code_label = NodePath("RoomCode")
create_lobby_button = NodePath("CreateLobby")
join_container = NodePath("JoinContainer")
join_lobby_button = NodePath("JoinContainer/JoinLobby")
room_code_input = NodePath("JoinContainer/RoomCodeInput")
start_button = NodePath("Start")
leave_button = NodePath("Leave")
map_select = NodePath("../../map_select")
points_to_win = NodePath("../../points")

[node name="Leader" type="Label" parent="options/Online/Lobby"]
layout_mode = 2
text = "You are the leader"

[node name="RoomCode" type="Label" parent="options/Online/Lobby"]
layout_mode = 2
text = "AAAA"

[node name="CreateLobby" type="Button" parent="options/Online/Lobby"]
layout_mode = 2
text = "Create Lobby"

[node name="JoinContainer" type="HBoxContainer" parent="options/Online/Lobby"]
layout_mode = 2

[node name="JoinLobby" type="Button" parent="options/Online/Lobby/JoinContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join Lobby"

[node name="RoomCodeInput" type="LineEdit" parent="options/Online/Lobby/JoinContainer"]
layout_mode = 2
placeholder_text = "code"

[node name="Start" type="Button" parent="options/Online/Lobby"]
layout_mode = 2
text = "Start Online Match"

[node name="Leave" type="Button" parent="options/Online/Lobby"]
layout_mode = 2
text = "Leave"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_6yjyn")
volume_db = -15.261
autoplay = true
parameters/looping = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 1052.0
offset_right = 106.0
offset_bottom = 1075.0
text = "version 0.1.11"

[connection signal="button_up" from="options/start_match" to="." method="_on_start_match_button_up"]
